# jeffjsoneditor

./: .gitignore  LICENCE.md  README.md  build.ps1  jeffimport.schema.json  main.py  pyproject.toml  requirements.txt  ruff.toml  start_app.bat
data/: Asgard_Group.json  as-group-favorite-export-helo1.json  new_group.json  sample_lance.json
src/: JJEditor.spec  app.py  app.spec
src/templates/: base.html  copy_group.html  edit_group.html  edit_member.html  index.html  new_group.html  new_member.html  rename_group.html
