[project]
name = "jeffjsoneditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENCE.md" }
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-bootstrap>=3.3.7.1",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
